--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.wallet-adapter-button .wallet-adapter-button-trigger,
+.wallet-adapter-button-trigger {
+  background-color: #512da8 !important;
+}
+
+.wallet-adapter-button:not([disabled]):hover {
+  background-color: #1a1f2e !important;
+}
+
 @layer base {
   body {
     @apply text-dark-gray;
@@ -10,9 +19,6 @@
 }
 
 @layer components {
-  .wallet-adapter-button-trigger {
-    background-color: #512da8 !important;
-  }
   input,
   textarea {
     @apply p-2 border border-dark-gray rounded w-full;
